--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "author": "Jaime Noel Alvarez Luna",
   "dependencies": {
     "axios": "^0.19.0",
+    "clsx": "^1.0.4",
     "google-maps-react": "^2.0.2",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.3",
