--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "keywords": [],
   "author": "Jaime Noel Alvarez Luna",
   "dependencies": {
+    "@react-google-maps/api": "^1.6.0",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
     "google-maps-react": "^2.0.2",
